@@ -536,6 +536,11 @@ class MisdesignChecker(BaseChecker):
             ignored_args_num = 0
         # check number of local variables
         locnum = len(node.locals) - ignored_args_num
+
+        # decrement number of local variables if '_' is one of them
+        if "_" in node.locals:
+            locnum -= 1
+
         if locnum > self.linter.config.max_locals:
             self.add_message(
                 "too-many-locals",
