@@ -9,6 +9,10 @@ Release date: TBA
 ..
   Put new features here and also in 'doc/whatsnew/2.14.rst'
 
+* Started ignoring underscore as a local variable for ``too-many-locals``.
+
+  Closes #6488
+
 * Improved wording of the message of ``deprecated-module``
 
   Closes #6169
